Responsividade do quiz

--- a/index.html
+++ b/index.html
@@ -169,6 +169,14 @@
         <br>
 
         <div class="ConteinerQuiz">
+
+            <br>
+            <br>
+            <br>
+            <button onclick="DesQuiz()" class="Bt2" style="font-size: 35px;"> &emsp; X &emsp; </button>
+            <br>
+            <br>
+            <br>
             <section class="quiz">
                 <div class="questao"> 
                     <div class="Enunciado">
