--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="CSS/sto.css">
     <link rel="stylesheet" href="CSS/styleResponsive.css">
 
+    <link rel="shortcut icon" href="Img/Logo-page.png" type="image/x-icon">
     
 
     <link rel="canonical" href="https://your-website.com/blog-post" />
@@ -28,7 +29,8 @@
             <button id="Bchat" onclick="IntoChat()">Chat</button>
             <button id="Bexp" onclick="IntoExposicao()">Sobre</button>
         </div>
-        
+
+        <img  src="Img/Logo-site.png" style="width: 80%; margin-top: 70%;" class="imginit">
     </nav>
 
     <!-- Home -->
